# Lootinator

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/src/: constraints.json  main.cpp
kernel-launcher/: kernel_launcher.cpp  test_command  test_kernel_source.txt
kernel-launcher/auto-benchmark/: benchmark_results.txt  benchmarker_source.cu  cuda_source_generator.cpp  kernel_launcher.cpp  launcher_data.h  runner_source.cu  source.cu  test_config.json
kernel-launcher/auto-benchmark/test/: README  config.json  config_small.json  kernel.shm  kernel1.cu  kernel2.cu  kernel3.cu
kernel-launcher/simple/: README  kernel_launcher.cpp
lootinator/: CMakeLists.txt
lootinator-testing/: CMakeLists.txt
lootinator-testing/include/lootinator-testing/: assertions.h
lootinator-testing/src/: assertions.cpp
lootinator-testing/tests/: constraint_test.cpp
lootinator/include/lootinator/: assertions.h  loot_table.h  lootinator.h
lootinator/include/lootinator/constraint/: constraint.h
lootinator/include/lootinator/template/: helpers.h  kernel_template.h  template.h
lootinator/include/lootinator/utility/: debug.h  range.h
lootinator/src/: loot_table.cpp  lootinator.cpp
lootinator/src/constraint/: constraint.cpp  constraint.h
lootinator/src/template/: helpers.cpp  kernel_template.cpp  template.cpp
lootinator/src/template/component/: TODO
lootinator/src/template/function/: TODO
lootinator/src/templates/: generator.cpp  template.cpp
lootinator/src/templates/kernels/: TODO
lootinator/src/utility/: debug.cpp
lootinator/tests/: constraint_json_test.cpp  constraint_test.cpp  constraints.json
src/constraint/: constraint  constraint.cpp
src/templates/: generator.cpp  test.json
